Refactored and Fixed issues with the timer libs